fix footer width on menu links causing horizontal scroll

--- a/less/responsive.less
+++ b/less/responsive.less
@@ -88,6 +88,9 @@
 	.footer.container {
 		padding: 0px;
 	}
+	.footer-logos {
+		padding: 0px 20px;
+	}
 }
 
 /* AT MIN SMALL */
@@ -129,7 +132,13 @@
         }
         footer .footer-menu-section {
                 margin-left: 36px;
+		width: 370px;
         }
+        footer .region-footer ul.menu.nav {
+		& li a {
+			font-size: 18px;
+		}
+	}
 
 	.image-btn-hover-container {
         	position: absolute;
