--- a/less/style.less
+++ b/less/style.less
@@ -349,7 +349,7 @@ footer .region-footer section {
 }
 footer .footer-menu-section {
 	display: inline-block;
-	width: 370px;
+	/* width: 370px; */
 	margin-top: 25px;
 }
 footer .footer-socialmedia-section {
@@ -362,25 +362,24 @@ footer .footer-socialmedia-section {
 
 footer .region-footer ul.menu.nav {
 	display: inline-block;
-}
-footer .region-footer ul.menu.nav li {
-	float: left;
-        &:hover {
-		background: none;
+        & li {
+		float: left;
+        	&:hover {
+			background: none;
+		}
+		& a {
+			color: #FFF;
+			border-right: 1px solid #FFF;
+        		line-height: 0px;
+			font-size: 14px; 
+			&:hover {
+				text-decoration: underline;
+				color: #4975B9;
+				background: none;
+			}
+		}
 	}
 }
-footer .region-footer ul.menu.nav li a {
-	color: #FFF;
-	border-right: 1px solid #FFF;
-        line-height: 0px;
-	&:hover {
-		text-decoration: underline;
-		color: #4975B9;
-		background: none;
-	}
-}
-
-
 
 
 /****************/
